<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>Robot bringup package with configuration files and launch files for mobile manipulator robot</description>
  <maintainer email="frlab@frlab.com">frlab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- Robot packages -->
  <exec_depend>robot_hardware</exec_depend>
  <exec_depend>robot_description</exec_depend>
  
  <!-- ros2_control -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  
  <!-- Localization -->
  <exec_depend>robot_localization</exec_depend>
  
  <!-- Utilities -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
